编译原理/实验7/实验七/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT

Grammar

Rule 0     S' -> query
Rule 1     query -> select
Rule 2     query -> LP query RP
Rule 3     select -> SELECT list FROM table
Rule 4     select -> SELECT list FROM table ORDER BY list
Rule 5     select -> SELECT list FROM table WHERE lst
Rule 6     select -> SELECT list FROM table WHERE lst ORDER BY list
Rule 7     table -> NAME
Rule 8     table -> LP query RP
Rule 9     tabel -> NAME AS NAME
Rule 10    table -> table AS NAME
Rule 11    table -> table COMMA table
Rule 12    lst -> lst AND lst
Rule 13    lst -> lst OR lst
Rule 14    lst -> NAME BETWEEN NUMBER AND NUMBER
Rule 15    lst -> NAME IN LP query RP
Rule 16    lst -> NAME = query
Rule 17    lst -> NAME < agg
Rule 18    lst -> NAME > agg
Rule 19    lst -> NAME = agg
Rule 20    lst -> NAME < NUMBER
Rule 21    lst -> NAME > NUMBER
Rule 22    lst -> NAME = NUMBER
Rule 23    lst -> agg > NUMBER
Rule 24    lst -> agg < NUMBER
Rule 25    lst -> agg = NUMBER
Rule 26    agg -> SUM LP NAME RP
Rule 27    agg -> AVG LP NAME RP
Rule 28    agg -> COUNT LP NAME RP
Rule 29    agg -> MIN LP NAME RP
Rule 30    agg -> MAX LP NAME RP
Rule 31    agg -> COUNT LP * RP
Rule 32    list -> NAME
Rule 33    list -> *
Rule 34    list -> list COMMA list
Rule 35    list -> list AND NAME
Rule 36    list -> list OR NAME
Rule 37    list -> agg

Terminals, with rules where they appear

*                    : 31 33
<                    : 17 20 24
=                    : 16 19 22 25
>                    : 18 21 23
AND                  : 12 14 35
AS                   : 9 10
AVG                  : 27
BETWEEN              : 14
BY                   : 4 6
COMMA                : 11 34
COUNT                : 28 31
DOT                  : 
FROM                 : 3 4 5 6
IN                   : 15
LP                   : 2 8 15 26 27 28 29 30 31
MAX                  : 30
MIN                  : 29
NAME                 : 7 9 9 10 14 15 16 17 18 19 20 21 22 26 27 28 29 30 32 35 36
NUMBER               : 14 14 20 21 22 23 24 25
OR                   : 13 36
ORDER                : 4 6
RP                   : 2 8 15 26 27 28 29 30 31
SELECT               : 3 4 5 6
SUM                  : 26
WHERE                : 5 6
error                : 

Nonterminals, with rules where they appear

agg                  : 17 18 19 23 24 25 37
list                 : 3 4 4 5 6 6 34 34 35 36
lst                  : 5 6 12 12 13 13
query                : 2 8 15 16 0
select               : 1
tabel                : 
table                : 3 4 5 6 10 11 11

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table
    (4) select -> . SELECT list FROM table ORDER BY list
    (5) select -> . SELECT list FROM table WHERE lst
    (6) select -> . SELECT list FROM table WHERE lst ORDER BY list

    LP              shift and go to state 2
    SELECT          shift and go to state 4

    query                          shift and go to state 3
    select                         shift and go to state 1

state 1

    (1) query -> select .

    $end            reduce using rule 1 (query -> select .)
    RP              reduce using rule 1 (query -> select .)
    ORDER           reduce using rule 1 (query -> select .)
    AND             reduce using rule 1 (query -> select .)
    OR              reduce using rule 1 (query -> select .)


state 2

    (2) query -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table
    (4) select -> . SELECT list FROM table ORDER BY list
    (5) select -> . SELECT list FROM table WHERE lst
    (6) select -> . SELECT list FROM table WHERE lst ORDER BY list

    LP              shift and go to state 2
    SELECT          shift and go to state 4

    query                          shift and go to state 5
    select                         shift and go to state 1

state 3

    (0) S' -> query .



state 4

    (3) select -> SELECT . list FROM table
    (4) select -> SELECT . list FROM table ORDER BY list
    (5) select -> SELECT . list FROM table WHERE lst
    (6) select -> SELECT . list FROM table WHERE lst ORDER BY list
    (32) list -> . NAME
    (33) list -> . *
    (34) list -> . list COMMA list
    (35) list -> . list AND NAME
    (36) list -> . list OR NAME
    (37) list -> . agg
    (26) agg -> . SUM LP NAME RP
    (27) agg -> . AVG LP NAME RP
    (28) agg -> . COUNT LP NAME RP
    (29) agg -> . MIN LP NAME RP
    (30) agg -> . MAX LP NAME RP
    (31) agg -> . COUNT LP * RP

    NAME            shift and go to state 7
    *               shift and go to state 12
    SUM             shift and go to state 11
    AVG             shift and go to state 14
    COUNT           shift and go to state 6
    MIN             shift and go to state 8
    MAX             shift and go to state 10

    agg                            shift and go to state 9
    list                           shift and go to state 13

state 5

    (2) query -> LP query . RP

    RP              shift and go to state 15


state 6

    (28) agg -> COUNT . LP NAME RP
    (31) agg -> COUNT . LP * RP

    LP              shift and go to state 16


state 7

    (32) list -> NAME .

    COMMA           reduce using rule 32 (list -> NAME .)
    AND             reduce using rule 32 (list -> NAME .)
    OR              reduce using rule 32 (list -> NAME .)
    $end            reduce using rule 32 (list -> NAME .)
    RP              reduce using rule 32 (list -> NAME .)
    ORDER           reduce using rule 32 (list -> NAME .)
    FROM            reduce using rule 32 (list -> NAME .)


state 8

    (29) agg -> MIN . LP NAME RP

    LP              shift and go to state 17


state 9

    (37) list -> agg .

    COMMA           reduce using rule 37 (list -> agg .)
    AND             reduce using rule 37 (list -> agg .)
    OR              reduce using rule 37 (list -> agg .)
    $end            reduce using rule 37 (list -> agg .)
    RP              reduce using rule 37 (list -> agg .)
    ORDER           reduce using rule 37 (list -> agg .)
    FROM            reduce using rule 37 (list -> agg .)


state 10

    (30) agg -> MAX . LP NAME RP

    LP              shift and go to state 18


state 11

    (26) agg -> SUM . LP NAME RP

    LP              shift and go to state 19


state 12

    (33) list -> * .

    COMMA           reduce using rule 33 (list -> * .)
    AND             reduce using rule 33 (list -> * .)
    OR              reduce using rule 33 (list -> * .)
    $end            reduce using rule 33 (list -> * .)
    RP              reduce using rule 33 (list -> * .)
    ORDER           reduce using rule 33 (list -> * .)
    FROM            reduce using rule 33 (list -> * .)


state 13

    (3) select -> SELECT list . FROM table
    (4) select -> SELECT list . FROM table ORDER BY list
    (5) select -> SELECT list . FROM table WHERE lst
    (6) select -> SELECT list . FROM table WHERE lst ORDER BY list
    (34) list -> list . COMMA list
    (35) list -> list . AND NAME
    (36) list -> list . OR NAME

    FROM            shift and go to state 21
    COMMA           shift and go to state 22
    AND             shift and go to state 20
    OR              shift and go to state 23


state 14

    (27) agg -> AVG . LP NAME RP

    LP              shift and go to state 24


state 15

    (2) query -> LP query RP .

    $end            reduce using rule 2 (query -> LP query RP .)
    RP              reduce using rule 2 (query -> LP query RP .)
    ORDER           reduce using rule 2 (query -> LP query RP .)
    AND             reduce using rule 2 (query -> LP query RP .)
    OR              reduce using rule 2 (query -> LP query RP .)


state 16

    (28) agg -> COUNT LP . NAME RP
    (31) agg -> COUNT LP . * RP

    NAME            shift and go to state 26
    *               shift and go to state 25


state 17

    (29) agg -> MIN LP . NAME RP

    NAME            shift and go to state 27


state 18

    (30) agg -> MAX LP . NAME RP

    NAME            shift and go to state 28


state 19

    (26) agg -> SUM LP . NAME RP

    NAME            shift and go to state 29


state 20

    (35) list -> list AND . NAME

    NAME            shift and go to state 30


state 21

    (3) select -> SELECT list FROM . table
    (4) select -> SELECT list FROM . table ORDER BY list
    (5) select -> SELECT list FROM . table WHERE lst
    (6) select -> SELECT list FROM . table WHERE lst ORDER BY list
    (7) table -> . NAME
    (8) table -> . LP query RP
    (10) table -> . table AS NAME
    (11) table -> . table COMMA table

    NAME            shift and go to state 31
    LP              shift and go to state 32

    table                          shift and go to state 33

state 22

    (34) list -> list COMMA . list
    (32) list -> . NAME
    (33) list -> . *
    (34) list -> . list COMMA list
    (35) list -> . list AND NAME
    (36) list -> . list OR NAME
    (37) list -> . agg
    (26) agg -> . SUM LP NAME RP
    (27) agg -> . AVG LP NAME RP
    (28) agg -> . COUNT LP NAME RP
    (29) agg -> . MIN LP NAME RP
    (30) agg -> . MAX LP NAME RP
    (31) agg -> . COUNT LP * RP

    NAME            shift and go to state 7
    *               shift and go to state 12
    SUM             shift and go to state 11
    AVG             shift and go to state 14
    COUNT           shift and go to state 6
    MIN             shift and go to state 8
    MAX             shift and go to state 10

    agg                            shift and go to state 9
    list                           shift and go to state 34

state 23

    (36) list -> list OR . NAME

    NAME            shift and go to state 35


state 24

    (27) agg -> AVG LP . NAME RP

    NAME            shift and go to state 36


state 25

    (31) agg -> COUNT LP * . RP

    RP              shift and go to state 37


state 26

    (28) agg -> COUNT LP NAME . RP

    RP              shift and go to state 38


state 27

    (29) agg -> MIN LP NAME . RP

    RP              shift and go to state 39


state 28

    (30) agg -> MAX LP NAME . RP

    RP              shift and go to state 40


state 29

    (26) agg -> SUM LP NAME . RP

    RP              shift and go to state 41


state 30

    (35) list -> list AND NAME .

    COMMA           reduce using rule 35 (list -> list AND NAME .)
    AND             reduce using rule 35 (list -> list AND NAME .)
    OR              reduce using rule 35 (list -> list AND NAME .)
    $end            reduce using rule 35 (list -> list AND NAME .)
    RP              reduce using rule 35 (list -> list AND NAME .)
    ORDER           reduce using rule 35 (list -> list AND NAME .)
    FROM            reduce using rule 35 (list -> list AND NAME .)


state 31

    (7) table -> NAME .

    AS              reduce using rule 7 (table -> NAME .)
    COMMA           reduce using rule 7 (table -> NAME .)
    ORDER           reduce using rule 7 (table -> NAME .)
    WHERE           reduce using rule 7 (table -> NAME .)
    $end            reduce using rule 7 (table -> NAME .)
    RP              reduce using rule 7 (table -> NAME .)
    AND             reduce using rule 7 (table -> NAME .)
    OR              reduce using rule 7 (table -> NAME .)


state 32

    (8) table -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table
    (4) select -> . SELECT list FROM table ORDER BY list
    (5) select -> . SELECT list FROM table WHERE lst
    (6) select -> . SELECT list FROM table WHERE lst ORDER BY list

    LP              shift and go to state 2
    SELECT          shift and go to state 4

    query                          shift and go to state 42
    select                         shift and go to state 1

state 33

    (3) select -> SELECT list FROM table .
    (4) select -> SELECT list FROM table . ORDER BY list
    (5) select -> SELECT list FROM table . WHERE lst
    (6) select -> SELECT list FROM table . WHERE lst ORDER BY list
    (10) table -> table . AS NAME
    (11) table -> table . COMMA table

  ! shift/reduce conflict for ORDER resolved as shift
    RP              reduce using rule 3 (select -> SELECT list FROM table .)
    $end            reduce using rule 3 (select -> SELECT list FROM table .)
    AND             reduce using rule 3 (select -> SELECT list FROM table .)
    OR              reduce using rule 3 (select -> SELECT list FROM table .)
    ORDER           shift and go to state 44
    WHERE           shift and go to state 46
    AS              shift and go to state 43
    COMMA           shift and go to state 45

  ! ORDER           [ reduce using rule 3 (select -> SELECT list FROM table .) ]


state 34

    (34) list -> list COMMA list .
    (34) list -> list . COMMA list
    (35) list -> list . AND NAME
    (36) list -> list . OR NAME

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    $end            reduce using rule 34 (list -> list COMMA list .)
    RP              reduce using rule 34 (list -> list COMMA list .)
    ORDER           reduce using rule 34 (list -> list COMMA list .)
    FROM            reduce using rule 34 (list -> list COMMA list .)
    COMMA           shift and go to state 22
    AND             shift and go to state 20
    OR              shift and go to state 23

  ! COMMA           [ reduce using rule 34 (list -> list COMMA list .) ]
  ! AND             [ reduce using rule 34 (list -> list COMMA list .) ]
  ! OR              [ reduce using rule 34 (list -> list COMMA list .) ]


state 35

    (36) list -> list OR NAME .

    COMMA           reduce using rule 36 (list -> list OR NAME .)
    AND             reduce using rule 36 (list -> list OR NAME .)
    OR              reduce using rule 36 (list -> list OR NAME .)
    $end            reduce using rule 36 (list -> list OR NAME .)
    RP              reduce using rule 36 (list -> list OR NAME .)
    ORDER           reduce using rule 36 (list -> list OR NAME .)
    FROM            reduce using rule 36 (list -> list OR NAME .)


state 36

    (27) agg -> AVG LP NAME . RP

    RP              shift and go to state 47


state 37

    (31) agg -> COUNT LP * RP .

    >               reduce using rule 31 (agg -> COUNT LP * RP .)
    <               reduce using rule 31 (agg -> COUNT LP * RP .)
    =               reduce using rule 31 (agg -> COUNT LP * RP .)
    ORDER           reduce using rule 31 (agg -> COUNT LP * RP .)
    AND             reduce using rule 31 (agg -> COUNT LP * RP .)
    OR              reduce using rule 31 (agg -> COUNT LP * RP .)
    $end            reduce using rule 31 (agg -> COUNT LP * RP .)
    RP              reduce using rule 31 (agg -> COUNT LP * RP .)
    COMMA           reduce using rule 31 (agg -> COUNT LP * RP .)
    FROM            reduce using rule 31 (agg -> COUNT LP * RP .)


state 38

    (28) agg -> COUNT LP NAME RP .

    >               reduce using rule 28 (agg -> COUNT LP NAME RP .)
    <               reduce using rule 28 (agg -> COUNT LP NAME RP .)
    =               reduce using rule 28 (agg -> COUNT LP NAME RP .)
    ORDER           reduce using rule 28 (agg -> COUNT LP NAME RP .)
    AND             reduce using rule 28 (agg -> COUNT LP NAME RP .)
    OR              reduce using rule 28 (agg -> COUNT LP NAME RP .)
    $end            reduce using rule 28 (agg -> COUNT LP NAME RP .)
    RP              reduce using rule 28 (agg -> COUNT LP NAME RP .)
    COMMA           reduce using rule 28 (agg -> COUNT LP NAME RP .)
    FROM            reduce using rule 28 (agg -> COUNT LP NAME RP .)


state 39

    (29) agg -> MIN LP NAME RP .

    >               reduce using rule 29 (agg -> MIN LP NAME RP .)
    <               reduce using rule 29 (agg -> MIN LP NAME RP .)
    =               reduce using rule 29 (agg -> MIN LP NAME RP .)
    ORDER           reduce using rule 29 (agg -> MIN LP NAME RP .)
    AND             reduce using rule 29 (agg -> MIN LP NAME RP .)
    OR              reduce using rule 29 (agg -> MIN LP NAME RP .)
    $end            reduce using rule 29 (agg -> MIN LP NAME RP .)
    RP              reduce using rule 29 (agg -> MIN LP NAME RP .)
    COMMA           reduce using rule 29 (agg -> MIN LP NAME RP .)
    FROM            reduce using rule 29 (agg -> MIN LP NAME RP .)


state 40

    (30) agg -> MAX LP NAME RP .

    >               reduce using rule 30 (agg -> MAX LP NAME RP .)
    <               reduce using rule 30 (agg -> MAX LP NAME RP .)
    =               reduce using rule 30 (agg -> MAX LP NAME RP .)
    ORDER           reduce using rule 30 (agg -> MAX LP NAME RP .)
    AND             reduce using rule 30 (agg -> MAX LP NAME RP .)
    OR              reduce using rule 30 (agg -> MAX LP NAME RP .)
    $end            reduce using rule 30 (agg -> MAX LP NAME RP .)
    RP              reduce using rule 30 (agg -> MAX LP NAME RP .)
    COMMA           reduce using rule 30 (agg -> MAX LP NAME RP .)
    FROM            reduce using rule 30 (agg -> MAX LP NAME RP .)


state 41

    (26) agg -> SUM LP NAME RP .

    >               reduce using rule 26 (agg -> SUM LP NAME RP .)
    <               reduce using rule 26 (agg -> SUM LP NAME RP .)
    =               reduce using rule 26 (agg -> SUM LP NAME RP .)
    ORDER           reduce using rule 26 (agg -> SUM LP NAME RP .)
    AND             reduce using rule 26 (agg -> SUM LP NAME RP .)
    OR              reduce using rule 26 (agg -> SUM LP NAME RP .)
    $end            reduce using rule 26 (agg -> SUM LP NAME RP .)
    RP              reduce using rule 26 (agg -> SUM LP NAME RP .)
    COMMA           reduce using rule 26 (agg -> SUM LP NAME RP .)
    FROM            reduce using rule 26 (agg -> SUM LP NAME RP .)


state 42

    (8) table -> LP query . RP

    RP              shift and go to state 48


state 43

    (10) table -> table AS . NAME

    NAME            shift and go to state 49


state 44

    (4) select -> SELECT list FROM table ORDER . BY list

    BY              shift and go to state 50


state 45

    (11) table -> table COMMA . table
    (7) table -> . NAME
    (8) table -> . LP query RP
    (10) table -> . table AS NAME
    (11) table -> . table COMMA table

    NAME            shift and go to state 31
    LP              shift and go to state 32

    table                          shift and go to state 51

state 46

    (5) select -> SELECT list FROM table WHERE . lst
    (6) select -> SELECT list FROM table WHERE . lst ORDER BY list
    (12) lst -> . lst AND lst
    (13) lst -> . lst OR lst
    (14) lst -> . NAME BETWEEN NUMBER AND NUMBER
    (15) lst -> . NAME IN LP query RP
    (16) lst -> . NAME = query
    (17) lst -> . NAME < agg
    (18) lst -> . NAME > agg
    (19) lst -> . NAME = agg
    (20) lst -> . NAME < NUMBER
    (21) lst -> . NAME > NUMBER
    (22) lst -> . NAME = NUMBER
    (23) lst -> . agg > NUMBER
    (24) lst -> . agg < NUMBER
    (25) lst -> . agg = NUMBER
    (26) agg -> . SUM LP NAME RP
    (27) agg -> . AVG LP NAME RP
    (28) agg -> . COUNT LP NAME RP
    (29) agg -> . MIN LP NAME RP
    (30) agg -> . MAX LP NAME RP
    (31) agg -> . COUNT LP * RP

    NAME            shift and go to state 53
    SUM             shift and go to state 11
    AVG             shift and go to state 14
    COUNT           shift and go to state 6
    MIN             shift and go to state 8
    MAX             shift and go to state 10

    agg                            shift and go to state 54
    lst                            shift and go to state 52

state 47

    (27) agg -> AVG LP NAME RP .

    >               reduce using rule 27 (agg -> AVG LP NAME RP .)
    <               reduce using rule 27 (agg -> AVG LP NAME RP .)
    =               reduce using rule 27 (agg -> AVG LP NAME RP .)
    ORDER           reduce using rule 27 (agg -> AVG LP NAME RP .)
    AND             reduce using rule 27 (agg -> AVG LP NAME RP .)
    OR              reduce using rule 27 (agg -> AVG LP NAME RP .)
    $end            reduce using rule 27 (agg -> AVG LP NAME RP .)
    RP              reduce using rule 27 (agg -> AVG LP NAME RP .)
    COMMA           reduce using rule 27 (agg -> AVG LP NAME RP .)
    FROM            reduce using rule 27 (agg -> AVG LP NAME RP .)


state 48

    (8) table -> LP query RP .

    AS              reduce using rule 8 (table -> LP query RP .)
    COMMA           reduce using rule 8 (table -> LP query RP .)
    ORDER           reduce using rule 8 (table -> LP query RP .)
    WHERE           reduce using rule 8 (table -> LP query RP .)
    $end            reduce using rule 8 (table -> LP query RP .)
    RP              reduce using rule 8 (table -> LP query RP .)
    AND             reduce using rule 8 (table -> LP query RP .)
    OR              reduce using rule 8 (table -> LP query RP .)


state 49

    (10) table -> table AS NAME .

    AS              reduce using rule 10 (table -> table AS NAME .)
    COMMA           reduce using rule 10 (table -> table AS NAME .)
    ORDER           reduce using rule 10 (table -> table AS NAME .)
    WHERE           reduce using rule 10 (table -> table AS NAME .)
    $end            reduce using rule 10 (table -> table AS NAME .)
    RP              reduce using rule 10 (table -> table AS NAME .)
    AND             reduce using rule 10 (table -> table AS NAME .)
    OR              reduce using rule 10 (table -> table AS NAME .)


state 50

    (4) select -> SELECT list FROM table ORDER BY . list
    (32) list -> . NAME
    (33) list -> . *
    (34) list -> . list COMMA list
    (35) list -> . list AND NAME
    (36) list -> . list OR NAME
    (37) list -> . agg
    (26) agg -> . SUM LP NAME RP
    (27) agg -> . AVG LP NAME RP
    (28) agg -> . COUNT LP NAME RP
    (29) agg -> . MIN LP NAME RP
    (30) agg -> . MAX LP NAME RP
    (31) agg -> . COUNT LP * RP

    NAME            shift and go to state 7
    *               shift and go to state 12
    SUM             shift and go to state 11
    AVG             shift and go to state 14
    COUNT           shift and go to state 6
    MIN             shift and go to state 8
    MAX             shift and go to state 10

    agg                            shift and go to state 9
    list                           shift and go to state 55

state 51

    (11) table -> table COMMA table .
    (10) table -> table . AS NAME
    (11) table -> table . COMMA table

  ! shift/reduce conflict for AS resolved as shift
  ! shift/reduce conflict for COMMA resolved as shift
    ORDER           reduce using rule 11 (table -> table COMMA table .)
    WHERE           reduce using rule 11 (table -> table COMMA table .)
    $end            reduce using rule 11 (table -> table COMMA table .)
    RP              reduce using rule 11 (table -> table COMMA table .)
    AND             reduce using rule 11 (table -> table COMMA table .)
    OR              reduce using rule 11 (table -> table COMMA table .)
    AS              shift and go to state 43
    COMMA           shift and go to state 45

  ! AS              [ reduce using rule 11 (table -> table COMMA table .) ]
  ! COMMA           [ reduce using rule 11 (table -> table COMMA table .) ]


state 52

    (5) select -> SELECT list FROM table WHERE lst .
    (6) select -> SELECT list FROM table WHERE lst . ORDER BY list
    (12) lst -> lst . AND lst
    (13) lst -> lst . OR lst

  ! shift/reduce conflict for ORDER resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    RP              reduce using rule 5 (select -> SELECT list FROM table WHERE lst .)
    $end            reduce using rule 5 (select -> SELECT list FROM table WHERE lst .)
    ORDER           shift and go to state 57
    AND             shift and go to state 56
    OR              shift and go to state 58

  ! ORDER           [ reduce using rule 5 (select -> SELECT list FROM table WHERE lst .) ]
  ! AND             [ reduce using rule 5 (select -> SELECT list FROM table WHERE lst .) ]
  ! OR              [ reduce using rule 5 (select -> SELECT list FROM table WHERE lst .) ]


state 53

    (14) lst -> NAME . BETWEEN NUMBER AND NUMBER
    (15) lst -> NAME . IN LP query RP
    (16) lst -> NAME . = query
    (17) lst -> NAME . < agg
    (18) lst -> NAME . > agg
    (19) lst -> NAME . = agg
    (20) lst -> NAME . < NUMBER
    (21) lst -> NAME . > NUMBER
    (22) lst -> NAME . = NUMBER

    BETWEEN         shift and go to state 59
    IN              shift and go to state 60
    =               shift and go to state 61
    <               shift and go to state 62
    >               shift and go to state 63


state 54

    (23) lst -> agg . > NUMBER
    (24) lst -> agg . < NUMBER
    (25) lst -> agg . = NUMBER

    >               shift and go to state 66
    <               shift and go to state 65
    =               shift and go to state 64


state 55

    (4) select -> SELECT list FROM table ORDER BY list .
    (34) list -> list . COMMA list
    (35) list -> list . AND NAME
    (36) list -> list . OR NAME

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    RP              reduce using rule 4 (select -> SELECT list FROM table ORDER BY list .)
